--- a/css/style.css
+++ b/css/style.css
@@ -301,9 +301,8 @@ nav .right a:hover{
 
 
 footer{
-    background-color: #333;
-    color: #fff;
+    background-color: white;
+    color: black;
     text-align: center;
     padding: 15px;
-    width: 100%;
 }
