--- a/css/style.css
+++ b/css/style.css
@@ -301,8 +301,9 @@ nav .right a:hover{
 
 
 footer{
-    background-color: white;
+    font-size: 1.2rem;
     color: black;
     text-align: center;
     padding: 15px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
